# TCWCE-Project

./: .gitignore  README.md  README_Zh-cn.md  TCWCE-project.sln
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE_1.md  ISSUE_TEMPLATE_2.md  ISSUE_TEMPLATE_3.md  ISSUE_TEMPLATE_4.md  ISSUE_TEMPLATE_5.md  ISSUE_TEMPLATE_6.md
src/: README.md  README_Zh-cn.md
src/cpp/: Debug.cpp  README.md  TCWCE.h  cpp.code-workspace
src/cpp/Debug-cpp-windows/: Debug-cpp-windows.vcxproj  Debug-cpp-windows.vcxproj.filters
src/cpp/TCWCE-cpp-windows/: LibMain.cpp  LibMain.h  TCWCE-cpp-windows.aps  TCWCE-cpp-windows.rc  TCWCE-cpp-windows.vcxproj  TCWCE-cpp-windows.vcxproj.filters  resource.h
src/cpp/lib/: Linked-List-Cpp.h
src/cs/Debug/: Debug.csproj  Program.cs
src/cs/Debug-CSharp-6.0/: Debug-CSharp-6.0.csproj  Program.cs
src/cs/Debug-CSharp-7.0/: Debug-CSharp-7.0.csproj  Program.cs
src/cs/Debug-CSharp-Core3.1/: Debug-CSharp-Core3.1.csproj  Program.cs
src/cs/TCWCE-CSharp/: README.md  TCWCE-CSharp.csproj  TCWCE.cs
src/cs/TCWCE-Project-cs/: LibMain.cs  TCWCE-Project-cs.csproj
src/cs/TCWCE-cs-net/: LibMain.cs  README.md  TCWCE-cs-net - Backup (1).csproj  TCWCE-cs-net - Backup.csproj  TCWCE-cs-net.csproj
src/cs/TCWCE-cs-net-debug/: Program.cs  TCWCE-cs-net-debug.csproj
src/cs/TCWCE-cs-netcore-debug/: Program.cs  TCWCE-cs-netcore-debug.csproj
src/python/: Debug.py  python.pyproj
src/python/TCWCE/: For_str.py  (+2 more)
src/rust/: Cargo.toml  README.md
src/rust/src/: API.rs  Header.rs  Headers.rs  Key.rs  SerializedString.rs  Value.rs  lib.rs
src/src/: API.rs  Key.rs  Value.rs  lib.rs
(+30 files in other folders)
